Revert "השלמה אוטומטית בחיפוש"
This reverts commit ce6004c356120eea1278a56f6b843f99fba3761a.

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -9,9 +9,7 @@
 
       {% comment %} --- Search Bar (Adapted from original structure) --- {% endcomment %}
       <form class="search-bar" id="searchForm">
-          <input type="text" class="search-input" placeholder="חפש שירים, אמנים, אלבומים..." id="searchInput" autofocus
-                 autocomplete="off" aria-haspopup="listbox" aria-controls="autocomplete-suggestions">
-          <div id="autocomplete-suggestions" class="autocomplete-suggestions-container" role="listbox"></div>
+          <input type="text" class="search-input" placeholder="חפש שירים, אמנים, אלבומים..." id="searchInput" autofocus>
           <div class="search-icons">
               <a href="{{ site.baseurl }}/artists" title="חפש אמנים" aria-label="חפש אמנים" class="search-icon-button"><i class="fas fa-user-friends"></i></a>
               <a href="{{ site.baseurl }}/new-songs" title="חפש שירים חדשים" aria-label="חפש שירים חדשים" class="search-icon-button"><i class="fas fa-fire"></i></a>
