--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="{{ page.keywords }}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <title>{{ page.title }}</title>
-  <link rel="canonical" href="{{ page.canonical_url }}" />
+  <link rel="canonical" href="{{ page.url | absolute_url }}">
   <link rel="icon" type="image/x-icon" href="{{ site.baseurl }}/assets/images/favicon.png">
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/personal.css">
 
