--- a/docs/_layouts/page.html
+++ b/docs/_layouts/page.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;500;600;700&display=swap" rel="stylesheet">
   <!-- קישורים לקבצי CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/personal.css">
-  <link rel="icon" type="image/x-icon" href="{{ site.baseurl }}/assets/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="{{ site.baseurl }}/assets/images/favicon.png">
   
   <title>{{ page.title | escape }}</title>
   
