שימוש בעדכון מותאם

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -19,7 +19,7 @@
   {
     "@context": "https://schema.org",
     "@type": "WebSite",
-    "url": "https://shir-bot.ze-kal.top",
+    "url": "{{ site.url }}",
     "name": "שיר-בוט",
     "description": "חיפוש חופשי והורדה בתוך מאגר של עשרות אלפי שירים..."
   }
