--- a/docs/_layouts/artist.html
+++ b/docs/_layouts/artist.html
@@ -19,7 +19,7 @@ layout: default # Inherits from default, which loads core.js, ads.js, search.js,
 
 <!-- START: New button for היכל הנגינה -->
 <div style="text-align: center; margin-bottom: 20px;">
-  <a href="https://www.hngn.co.il/זמרים/{{ page.title }}?utm_source=shir-bot.ze-kal.top&utm_medium=referral"
+  <a href="https://www.hngn.co.il/זמרים/{{ page.title }}?utm_source=shir-bot&utm_medium=referral"
      class="hngn-link-button"
      target="_blank"
      rel="noopener noreferrer"
