שינוי טקסט כפתור מעבר להיכל הנגינה

--- a/docs/_layouts/artist.html
+++ b/docs/_layouts/artist.html
@@ -24,7 +24,7 @@ layout: default # Inherits from default, which loads core.js, ads.js, search.js,
      target="_blank"
      rel="noopener noreferrer"
      title="האזן לשיריו של {{ page.title }} באתר היכל הנגינה">
-    האזנה לשירי האמן <i class="fas fa-external-link-alt"></i>
+    לדף הזמר בהיכל הנגינה <i class="fas fa-external-link-alt"></i>
   </a>
 </div>
 <!-- END: New button for היכל הנגינה -->
