קישור שליחת משוב דינמי

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -23,7 +23,9 @@
 
       {% comment %} --- Right Side Icons (From original structure) --- {% endcomment %}
       <div class="icons-container">
-        <a class="feedback-button" href="mailto:mesader.singelim@gmail.com" target="_blank" title="שלח משוב">
+        <a class="feedback-button feedback-mail-link" data-email="mesader.singelim@gmail.com" data-subject="משוב לאתר שיר-בוט" data-body="שלום,
+
+רציתי לשלוח משוב: " href="mailto:mesader.singelim@gmail.com" title="שלח משוב">
           <i class="fas fa-envelope"></i>
         </a>
         <a class="right-item" href="https://nhlocal.github.io/" title="לשאר התוכנות של היוצר">
