תנאי שימוש מפורטים ועיצוב הדף

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -51,7 +51,7 @@
 <!-- תנאי שימוש - הודעה קופצת בתחתית המסך -->
 <div id="terms-modal" class="terms-modal" style="display:none;">
   <span class="terms-modal-text">
-    אני מאשר את <a href="{{ site.baseurl }}/terms.html" target="_blank" class="terms-link">תנאי השימוש</a>
+    אני מאשר את <a href="{{ site.baseurl }}/terms/" target="_blank" class="terms-link">תנאי השימוש</a>
   </span>
   <button id="terms-accept-btn" class="terms-modal-btn">אישור</button>
 </div>
