שילוב פרסומות פנימיות בין השירים

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -26,6 +26,7 @@
   {% seo %}
   <script>
     var baseurl = "{{ site.baseurl }}";
+    var inlineAdsConfig = {{ site.data.ads.inline_ads | jsonify }};
   </script>
 </head>
 <body dir="rtl" style="background-color:#ECEFF1;">
